--- a/sleeky-frontend/frontend/assets/less/tablet.less
+++ b/sleeky-frontend/frontend/assets/less/tablet.less
@@ -43,7 +43,8 @@
 	    padding-right: 0;
 	}
 
-	input[type="submit"] {
+	input[type="submit"],
+	.short-url-button {
 		width: 40%;
 	    -webkit-border-radius: 6px;
 	    -moz-border-radius: 6px;
